--- a/Clase_10_11/AppReservasSW/AppReservasSW/Site.Master
+++ b/Clase_10_11/AppReservasSW/AppReservasSW/Site.Master
@@ -60,6 +60,8 @@
                         <li><a runat="server" href="~/Views/Carro.aspx">Carro</a></li>
                         <li><a runat="server" href="~/Views/Lote.aspx">Lote</a></li>
                         <li><a runat="server" href="~/Views/Proveedor.aspx">Proveedor</a></li>
+                        <li><a runat="server" href="~/Views/Puesto.aspx">Puesto</a></li>
+                        <li><a runat="server" href="~/Views/Empleado.aspx">Empleado</a></li>
 
                     </ul>
                 </div>
